# rust-api

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  env.example
migrations/2025-10-13-154523-0000_create_users/: up.sql
migrations/2025-10-18-193019-0000_create_password_reset_tokens/: up.sql
migrations/2025-10-18-200341-0000_add_user_role/: up.sql
migrations/2025-10-18-200543-0000_create_categories/: up.sql
migrations/2025-10-18-200658-0000_create_posts/: up.sql
migrations/2025-10-19-043106-0000_create_comments/: up.sql
src/: config.rs  errors.rs  main.rs  routes.rs  schema.rs  security.rs  state.rs
src/db/: connect.rs
src/handlers/: auth_handler.rs  category_handler.rs  comment_handler.rs  health_handler.rs  mod.rs  post_handler.rs  user_handler.rs
src/middlewars/: admin.rs  auth.rs  mod.rs  rate_limit.rs
src/models/: category.rs  comment.rs  jwt.rs  mod.rs  pagination.rs  password_reset.rs  post.rs  user.rs
src/repositories/: category_repository.rs  comment_repository.rs  mod.rs  password_reset_token_repository.rs  post_repository.rs  user_repository.rs
src/tests/: admin_flow.rs  auth_flow.rs  comment_flow.rs  common.rs  mod.rs  post_ownership_flow.rs  profile_flow.rs  public_flow.rs
src/usecases/: auth_usecase.rs  category_usecase.rs  comment_usecase.rs  mod.rs  post_usecase.rs  user_usecase.rs
tests/: integration_test.rs
