[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# password hashing
argon2 = "0.5"
rand = "0.8"
# Web Framework
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1"

# Database
dotenvy = "0.15" # สำหรับโหลด .env
time = "0.3" # ใช้สำหรับ Sqlx Time
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", default-features = false, features = ["postgres", "r2d2", "chrono"] }

# Utilities
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utoipa-swagger-ui
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
