[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
# password hashing
argon2 = "0.5"
rand = "0.8"

# jwt 
jsonwebtoken = "8"

# Web Framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1"

# Database
dotenvy = "0.15" # สำหรับโหลด .env
time = "0.3" # ใช้สำหรับ Sqlx Time
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", default-features = false, features = ["postgres", "r2d2", "chrono"] }


tower = { version = "0.4", features = ["limit", "buffer", "util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# utoipa-swagger-ui
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
moka = { version = "0.12", features = ["sync"] }
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
axum-test = "14"
once_cell = "1.19"
serde_json = "1.0"
